objects/ACE_Customer_Price_Changes__c.object
<CustomObject>
    <description>Price Change Process UI</description>
    <fields>
        <fullName>Account_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Customer Core Price Changes</relationshipLabel>
        <relationshipName>Customer_Core_Price_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Customer__r.Owner.FirstName + &apos; &apos; +  Customer__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Spend__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Satus__c</fullName>
        <description>Approval Status for Date Exception</description>
        <label>Approval Status</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Proposed_Price__c</fullName>
        <description>This price is used for IGM calculations</description>
        <label>New Price</label>
        <summarizedField>Ace_Customer_Core_Changes__c.Approved_Proposed_Price__c</summarizedField>
        <summaryForeignKey>Ace_Customer_Core_Changes__c.ACE_Customer_Price_Changes__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Average_Change__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Change</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Batch_Month__c</fullName>
        <formula>VALUE(RIGHT((LEFT((batchId__c), 2)),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch_Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Year__c</fullName>
        <formula>VALUE(RIGHT((batchId__c), 4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch_Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallMeRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when customer clicks call me from customer response page</description>
        <label>Call Me Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cap_Lost_Margin_Dollar_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cap Lost Margin Dollar $ 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Lost_Margin_Dollar_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cap Lost Margin Dollar $ 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Lost_Margin_Dollar_6_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cap Lost Margin Dollar $ 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Lost_Margin_Dollar__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cap Lost Margin Dollar $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Compare_Quarter__c</fullName>
        <formula>OR(((Cust_Notif_Approved_Year__c &gt; Batch_Year__c)),((Cust_Notif_Approved_Year__c = Batch_Year__c)&amp;&amp;(Cust_Notif_Approved_Month__c &gt; Batch_Month__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare_Quarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corecount__c</fullName>
        <label># Impacted Cores</label>
        <summaryForeignKey>Ace_Customer_Core_Changes__c.ACE_Customer_Price_Changes__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Exception_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores exception days for the current requested date exception</description>
        <label>Current Exception Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Margin_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Margin 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Margin_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Margin 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Margin_6_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Margin 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Sell_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate of the Current Sell Price</description>
        <label>Current Sell Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cust_Notif_Approved_Month__c</fullName>
        <formula>IF((MONTH(Customer_Notification_Date_Approved__c)) = 1.0, 1.0,
IF((MONTH(Customer_Notification_Date_Approved__c)) = 2.0, 1.0, 
IF((MONTH(Customer_Notification_Date_Approved__c)) = 3.0, 1.0, 
IF((MONTH(Customer_Notification_Date_Approved__c)) = 4.0, 2.0, 
IF((MONTH(Customer_Notification_Date_Approved__c)) = 5.0, 2.0, 
IF((MONTH(Customer_Notification_Date_Approved__c)) = 6.0, 2.0, 
IF((MONTH(Customer_Notification_Date_Approved__c)) = 7.0, 3.0, 
IF((MONTH(Customer_Notification_Date_Approved__c)) = 8.0, 3.0, 
IF((MONTH(Customer_Notification_Date_Approved__c)) = 9.0, 3.0, 
IF((MONTH(Customer_Notification_Date_Approved__c)) = 10.0, 4.0, 
IF((MONTH(Customer_Notification_Date_Approved__c)) = 11.0, 4.0, 
IF((MONTH(Customer_Notification_Date_Approved__c)) = 12.0, 4.0, 
null))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cust_Notif_Approved_Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Notif_Approved_Year__c</fullName>
        <formula>(YEAR(Customer_Notification_Date_Approved__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cust_Notif_Approved_Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Annual_Spend__c</fullName>
        <formula>Customer__r.Rolling_12_month_sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Annual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <formula>CASE( SFDC_Notification_Flag__c,&apos;1&apos;,&apos;No Requirements&apos;,&apos;2&apos;,&apos;Notification Required per Written Agreement&apos;,&apos;Approval Required per Written Agreement&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Requirements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Comments_Submitter__c</fullName>
        <label>Customer Comments Submitter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Notification_Date_Approved__c</fullName>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Notification_Date_Rep__c</fullName>
        <label>Customer Notification Date Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Notification_Date__c</fullName>
        <label>Customer Notification Date ACE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Email__c</fullName>
        <description>This field to capture the email of the customer who approved the price change</description>
        <label>Customer Response Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Response__c</fullName>
        <label>Customer Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Call Me</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ACE_Customer_Price_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ACE_Customer_Price_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Exception_Additional_Comments__c</fullName>
        <label>Date Exception Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Earliest_Date_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Earliest Date Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EffectiveDate_IsDifferent__c</fullName>
        <formula>IF( Sales_Price_Change_Effective_Date_Min__c !=  Sales_Price_Change_Effective_Date__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EffectiveDate Is Different</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date_Delay_Days__c</fullName>
        <formula>Sales_Price_Change_Effective_Date_Rep__c  -  Sales_Price_Change_Effective_Date_Approv__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date Delay Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date_Difference__c</fullName>
        <description>This is used by the batch job to pass the date changes to the SKU level</description>
        <label>Effective Date Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used by the batch job to modify the date at sku level</description>
        <label>Effective Date Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exception_Date_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exception Date Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exception_Date_Request_Reason__c</fullName>
        <label>Exception Date Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor Presence</fullName>
                    <default>true</default>
                    <label>Competitor Presence</label>
                </value>
                <value>
                    <fullName>New Customer (&lt;30 Days)</fullName>
                </value>
                <value>
                    <fullName>New Category</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_Date__c</fullName>
        <label>Exception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecasted_Spend_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forecasted Spend 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Spend_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forecasted Spend 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Spend_6_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forecasted Spend 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_IGM_Basis_Point_Increase__c</fullName>
        <formula>New_Gross_IGM1__c-Old_Gross_IGM1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross IGM Basis Point Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HomePage_Approval_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HomePage_Approval_History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HostedCatalog_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag if marked true will not allow data to be released to vendavo. The flag will be unset when the data is loaded back in by hosted Catalog team.</description>
        <label>HostedCatalog Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hosted_Catalog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hosted Catalog flag for Hosted Catalog bucket</description>
        <label>Hosted Catalog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpStat_Depnd__c</fullName>
        <formula>IF( Implementation_Status_Code__c == &apos;NOTIFY&apos;,
      IF( TODAY() &lt;  Sales_Price_Change_Effective_Date_Approv__c , &apos;NOTIFY-ATRISK&apos;,  
             IF( TODAY() &gt;=  Sales_Price_Change_Effective_Date_Approv__c , &apos;NOTIFY-LATE&apos;,
             Implementation_Status_Code__c)
         ),  
 
      IF(Implementation_Status_Code__c == &apos;COMPL&apos;,  
         IF(TODAY() &lt;  Sales_Price_Change_Effective_Date_Approv__c, &apos;COMPL-ATRISK&apos;,    
         IF(TODAY() &gt;=  Sales_Price_Change_Effective_Date_Approv__c, &apos;COMPL-ATRISK&apos;,
             Implementation_Status_Code__c )), 
      Implementation_Status_Code__c )
   )</formula>
        <label>ImpStat_Depnd</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Date__c</fullName>
        <label>Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Status3__c</fullName>
        <description>For Ace summary Grid</description>
        <formula>IF(AND(Implementation_Status_Code__c == &apos;SCH&apos;,SFDC_Notification_Flag__c == &apos;3&apos;),&apos;Scheduled - Pending Customer Approval&apos;,
 IF(Implementation_Status_Code__c == &apos;SCH&apos;,&apos;Scheduled&apos;,   
 IF( Implementation_Status_Code__c == &apos;SCH-PEN&apos;,&apos;Schedule May Change, Approval Pending&apos;, 
 IF( Implementation_Status_Code__c == &apos;DATA-SENT&apos;,&apos;Processing&apos;, 
 IF( Implementation_Status_Code__c == &apos;DATA-SUCCESS&apos;,&apos;Executed&apos;, 
 IF( Implementation_Status_Code__c == &apos;DATA-FAILED&apos;,&apos;Failed&apos;, 
 IF( Implementation_Status_Code__c == &apos;NOTIFY&apos;,
      IF( TODAY() &lt;  Sales_Price_Change_Effective_Date_Approv__c , &apos;AT RISK - Awaiting Rep Input of Customer Approval&apos;,  
             IF( TODAY() &gt;=  Sales_Price_Change_Effective_Date_Approv__c , &apos;LATE - Awaiting Rep Input of Customer Approval&apos;,
             &apos;&apos;)
         ),  
 
      IF(Implementation_Status_Code__c == &apos;COMPL&apos;,  
         IF(TODAY() &lt;  Sales_Price_Change_Effective_Date_Approv__c, &apos;Scheduled&apos;,    
         IF(TODAY() &gt;=  Sales_Price_Change_Effective_Date_Approv__c, &apos;Scheduled&apos;,
             &apos;&apos; )), 
      &apos;&apos;)
   ) 
 ))))))</formula>
        <label>Price Change Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Status_Code__c</fullName>
        <description>This will store the implementation status code which will eventually be used for driving the status image and description</description>
        <label>Implementation Status Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Status_Image__c</fullName>
        <description>Implementation Status Image</description>
        <formula>IMAGE(

CASE(Implementation_Status_Code__c,

&apos;SCH&apos;,&apos;/resource/ACESCH&apos;,
&apos;SCH-PEN&apos;,&apos;/resource/ACESCHPEN&apos;,
&apos;DATA-SENT&apos;,&apos;/resource/ACE_DATASENT&apos;,
&apos;DATA-SUCCESS&apos;,&apos;/resource/ACE_DATASUCCESS&apos;,
&apos;DATA-FAILED&apos;,&apos;/resource/ACE_DATAFAILED&apos;,
&apos;NOTIFY&apos;,(IF(TODAY() &lt; Sales_Price_Change_Effective_Date_Approv__c,&apos;/resource/ACE_NOTIFYATRISK&apos;,&apos;/resource/ACE_NOTIFYLATE&apos;)),


&apos;COMPL&apos;,(IF(TODAY() &lt; Sales_Price_Change_Effective_Date_Approv__c,&apos;/resource/ACESCH&apos;,&apos;/resource/resource/ACESCH&apos;)),

&apos;/resource/ACESCH&apos;),&quot;no image&quot;,25,25)</formula>
        <label>Price Change Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <label>Price Change Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRemediation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Remediation check for request remediation</description>
        <label>IsRemediation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_12_Month_Qty__c</fullName>
        <description>Accumulated SKU Sold Qty for this Core, Last 12 calendar months from current date
Same Time Period as of Sales</description>
        <label>Item 12 Month Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_12_Month_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Vendavo PA</description>
        <label>Item 12 Month Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_3_Month_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accumulated SKU Sold Qty for this Core, Last 3 calendar months from current date
Same Time Period as of Sales</description>
        <label>Item 3 Month Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_3_Month_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accumulated SKU Sales for this Core, Last 3 calendar months from current date</description>
        <label>Item 3 Month Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_6_Month_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accumulated SKU Sold Qty for this Core, Last 6 calendar months from current date
Same Time Period as of Sales</description>
        <label>Item 6 Month Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_6_Month_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Vendavo PA</description>
        <label>Item 6 Month Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L1_Mgr_AppReject_Time__c</fullName>
        <formula>IF ( L1_Mgr_Approval_End_Date__c != null, L1_Mgr_Approval_End_Date__c -  L1_Mgr_Approval_Start_Date__c,
if(Exception_Date_Lock__c = true, now() - L1_Mgr_Approval_Start_Date__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L1 Mgr AppReject Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1_Mgr_Approval_End_Date__c</fullName>
        <label>L1 Mgr Approval End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L1_Mgr_Approval_Start_Date__c</fullName>
        <label>L1 Mgr Approval Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2_Mgr_AppReject_Time__c</fullName>
        <formula>IF ( L2_Mgr_Approval_End_Date__c != null, L2_Mgr_Approval_End_Date__c -  L2_Mgr_Approval_Start_Date__c,
if(Exception_Date_Lock__c = true, now() - L2_Mgr_Approval_Start_Date__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2 Mgr AppReject Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2_Mgr_Approval_End_Date__c</fullName>
        <label>L2 Mgr Approval End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2_Mgr_Approval_Start_Date__c</fullName>
        <label>L2 Mgr Approval Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L3_Mgr_AppReject_Time__c</fullName>
        <formula>IF ( L3_Mgr_Approval_End_Date__c != null, L3_Mgr_Approval_End_Date__c -  L3_Mgr_Approval_Start_Date__c,
if(Exception_Date_Lock__c = true, now() - L3_Mgr_Approval_Start_Date__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L3 Mgr AppReject Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L3_Mgr_Approval_End_Date__c</fullName>
        <label>L3 Mgr Approval End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L3_Mgr_Approval_Start_Date__c</fullName>
        <label>L3 Mgr Approval Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModify_Tracking__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LastModify Tracking</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Exposure_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin Exposure 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Exposure_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin Exposure 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Exposure_6_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin Exposure 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Exposure_before_change__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin Exposure (before change)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Makeup_Plan__c</fullName>
        <label>Margin Makeup Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SKU price Increase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin_wo_Change_WAPO__c</fullName>
        <formula>IF( OR(Current_Sell_Price__c !=0,Current_Sell_Price__c !=null) , (Current_Sell_Price__c-New_WAPO_Cost__c)/Current_Sell_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin % wo/ Change WAPO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_wo_Change_WATD__c</fullName>
        <formula>IF( OR(Current_Sell_Price__c !=0,Current_Sell_Price__c !=null) , (Current_Sell_Price__c-New_WATD_Cost__c)/Current_Sell_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin % wo/ Change WATD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Gross_IGM1__c</fullName>
        <formula>IF( OR(Approved_Proposed_Price__c !=0,Approved_Proposed_Price__c !=null) , (New_Gross_IGM__c / Approved_Proposed_Price__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Gross IGM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Gross_IGM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Gross IGM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_IGM_Change__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New IGM $ Change</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_List_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate of the New List Price</description>
        <label>New List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Sell_Price_Dollar_Change_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Sell Price Dollar $ Change Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Sell_Price_Percentage_Change_Amoun__c</fullName>
        <formula>IF( OR(Current_Sell_Price__c !=0,Current_Sell_Price__c !=null) , New_Sell_Price_Dollar_Change_Amount__c/Current_Sell_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Sell Price Percentage % Change Amoun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_WAPO_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate of the  New WAPO Cost</description>
        <label>New WAPO Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_WATD_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is for the aggregate total</description>
        <label>New WATD Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NoOfSKUGovernedByActiveWrittenAgreement__c</fullName>
        <label># of Skus Governed By Active WA</label>
        <summarizedField>Ace_Customer_Core_Changes__c.NoOfSKUGovernedByActiveWrittenAgreement__c</summarizedField>
        <summaryForeignKey>Ace_Customer_Core_Changes__c.ACE_Customer_Price_Changes__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notification_Error__c</fullName>
        <description>Used to store any errors during email notification process</description>
        <label>Notification Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Status3__c</fullName>
        <formula>IF( Notification_Status_Code__c == &apos;NOTIFY-SCH&apos;,&apos;Scheduled&apos;, 
IF( Notification_Status_Code__c == &apos;NOTIFY-DELIVERED&apos;,&apos;Sent&apos;, 
IF( Notification_Status_Code__c == &apos;NOTIFY-CANCELLED&apos;,&apos;Cancelled&apos;, 

(IF( Notification_Status_Code__c == &apos;NOTIFY-FAILED&apos;,&apos;Failed&apos;, 
&apos;&apos;)) 
)) 
)</formula>
        <label>Notification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Status_Code__c</fullName>
        <externalId>true</externalId>
        <label>Notification_Status_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Status_Image__c</fullName>
        <formula>IMAGE(CASE(Notification_Status_Code__c, 
&apos;NOTIFY-SCH&apos;,&apos;/resource/ACESCH&apos;, 
&apos;NOTIFY-DELIVERED&apos;,&apos;/resource/ACE_NOTIFYDELIVERED&apos;, 
&apos;NOTIFY-CANCELLED&apos;,&apos;/resource/ACE_NOTIFYFAILED&apos;, 
&apos;NOTIFY-FAILED&apos;,&apos;/resource/ACE_NOTIFYFAILED&apos;, 
&apos;&apos;),&quot;&quot;,25,25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Status__c</fullName>
        <label>Notification Status Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Cancelled__c</fullName>
        <formula>if(Notification_Status_Code__c == &apos;NOTIFY-CANCELLED&apos;,&quot;Y&quot;,&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notify Cancelled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OD_Revenue_Impact__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Gross_IGM1__c</fullName>
        <formula>IF( OR(Current_Sell_Price__c !=0,Current_Sell_Price__c !=null) , Old_Gross_IGM__c/Current_Sell_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Gross IGM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Old_Gross_IGM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old Gross IGM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_WAPO_Margin1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old WAPO Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_WAPO_Margin__c</fullName>
        <formula>IF( OR(Current_Sell_Price__c !=0,Current_Sell_Price__c !=null) , Old_WAPO_Margin1__c/Current_Sell_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old WAPO Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Old_WAPO__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is an Aggregate of the  Old WAPO cost</description>
        <label>Old WAPO</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_WATD_SRM1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old WATD SRM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_WATD_SRM__c</fullName>
        <formula>IF( OR(Current_Sell_Price__c !=0,Current_Sell_Price__c !=null) , Old_WATD_SRM1__c/Current_Sell_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old WATD SRM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Old_WATD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggrigate if Old WATD(Old WATD Cost)</description>
        <label>Old WATD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
</CustomObject>